src/snapshots/linear_nets__test____home__fran__Projects__rust__linear-nets__tests__translate-dup-in-exp.line__compilation.snap
---
source: src/test.rs
expression: "main_net.show_net(&show_agent, &mut scope, 0)"
---
Exp0[
    Par(Par(d e) Cntr(d)(e))
]
